--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "dingo-gw" %}
-{% set version = "0.4.3" %}
+{% set version = "0.5.0" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/dingo-gw-{{ version }}.tar.gz
-  sha256: 2260cdadd4bfc1418639f37e997a78492fc839860d7ba8cb96d2f47ccad9def1
+  sha256: 732b4968e48b32964e0b15c365abdc1c1960c6eef4f8409ab443a32178a7c8f3
   patches:
     - no-lalsuite.patch
 
@@ -20,6 +20,7 @@ build:
     - dingo_generate_asd_dataset = dingo.gw.noise.generate_dataset:generate_dataset
     - dingo_generate_dataset = dingo.gw.dataset.generate_dataset:main
     - dingo_generate_dataset_dag = dingo.gw.dataset.generate_dataset_dag:main
+    - dingo_generate_synthetic_asd_dataset = dingo.gw.noise.synthetic_noise.generate_dataset:main
     - dingo_ls = dingo.gw.ls_cli:ls
     - dingo_pipe = dingo.gw.pipe.main:main
     - dingo_pipe_importance_sampling = dingo.gw.pipe.importance_sampling:main
@@ -66,6 +67,7 @@ requirements:
     - scipy
     - threadpoolctl
     - torchvision
+    - tqdm
 
 test:
   imports:
@@ -79,6 +81,7 @@ test:
     - dingo_generate_asd_dataset --help
     - dingo_generate_dataset --help
     - dingo_generate_dataset_dag --help
+    - dingo_generate_synthetic_asd_dataset --help
     - dingo_ls --help
     - dingo_merge_asd_datasets --help
     - dingo_merge_datasets --help
