--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,7 +20,7 @@ build:
     - dingo_generate_asd_dataset = dingo.gw.noise.generate_dataset:generate_dataset
     - dingo_generate_dataset = dingo.gw.dataset.generate_dataset:main
     - dingo_generate_dataset_dag = dingo.gw.dataset.generate_dataset_dag:main
-    - dingo_generate_synthetic_asd_dataset = dingo.gw.noise.synthetic_noise.generate_dataset:main
+    - dingo_generate_synthetic_asd_dataset = dingo.gw.noise.synthetic.generate_dataset:main
     - dingo_ls = dingo.gw.ls_cli:ls
     - dingo_pipe = dingo.gw.pipe.main:main
     - dingo_pipe_importance_sampling = dingo.gw.pipe.importance_sampling:main
