--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -46,7 +46,7 @@ requirements:
   run:
     - astropy
     - bilby
-    - bilby_pipe >=1.3
+    - bilby_pipe ==1.4
     - configargparse
     - corner
     - glasflow
