--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,8 @@
 {% set name = "dingo-gw" %}
 {% set version = "0.8.0" %}
 
+{% set python_min = "3.10" %}
+
 package:
   name: {{ name|lower }}
   version: {{ version }}
