--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -48,7 +48,7 @@ requirements:
   run:
     - astropy-base
     - bilby
-    - bilby_pipe ==1.4.2
+    - bilby_pipe
     - configargparse
     - corner
     - glasflow
