--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,6 +28,7 @@ build:
     - dingo_pipe_importance_sampling = dingo.pipe.importance_sampling:main
     - dingo_pipe_generation = dingo.pipe.data_generation:main
     - dingo_pipe_plot = dingo.pipe.plot:main
+    - dingo_pipe_pp_test = dingo.pipe.pp_test:main
     - dingo_pipe_sampling = dingo.pipe.sampling:main
     - dingo_pt_to_hdf5 = dingo.core.utils.pt_to_hdf5:main
     - dingo_merge_datasets = dingo.gw.dataset.utils:merge_datasets_cli
